Add localization and fix translation

--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -10,7 +10,7 @@
     "Forgot Your Password?" : "Zapomniałeś hasła?",
     "Name" : "Imię",
     "Surname" : "Nazwisko",
-    "Mature year": "Rok matury",
+    "Matura year": "Rok matury",
     "Search" : "Szukaj",
     "Created at" : "Dodany",
     "Last updated at" : "Ostatnio aktualizowany",
@@ -32,7 +32,7 @@
     "User account type" : "Typ konta użytkownik",
     "The user can browse the entire database (shared and not shared) of graduates." : "Użytkownik może przeglądać całą baze danych (udostępnionych i nie udostępnionych) absolwentów.",
     "Moderator account type" : "Typ konta moderator",
-    "The moderator has the user's authority and can add, change and delete (into the basket) graduates." : "Moderator posiada uprawnienia użytkownika oraz może dodawać, zmieniać i usuwać (do kosza) absolwentów.",
+    "The moderator has the user's authority and can add, change and delete (into the bin) graduates." : "Moderator posiada uprawnienia użytkownika oraz może dodawać, zmieniać i usuwać (do kosza) absolwentów.",
     "Administrator account type" : " Typ konta administrator",
     "The administrator has moderator's authority and can permanently remove graduates from the database and may grant authority to other users." : "Administrator ma uprawnienia moderatora i może trwale usunąć absolwentów z bazy danych i może udzielić uprawnień innym użytkownikom.",
     "List of users" : "Spis użytkowników",
