--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -55,5 +55,10 @@
     "Force Delete" : "Usuń trwale",
     "The graduate has been restored!" : "Absolwent został przywrócony!",
     "The graduate has been permanently removed!" : "Absolwent został trwale usunięty!",
-    "Deleted at" : "Usunięty"
+    "Deleted at" : "Usunięty",
+    "Create" : "Stwórz",
+    "Choose custom avatar" : "Wybierz własny awatar",
+    "Choose files/scans (jpeg, png, bmp, gif, or svg)" : "Wybierz pliki/skany (jpeg, png, bmp, gif, lub svg)",
+    "If checked graduate will be shared": "Jeśli zaznaczysz absolwent będzie udostępniony dla niezalogowanych",
+    "Graduate has been successfully added!" : "Absolwent został pomyślnie dodany"
 }
