Add list of files showing of graduate

--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -62,5 +62,6 @@
     "If checked graduate will be shared": "Jeśli zaznaczysz absolwent będzie udostępniony dla niezalogowanych",
     "Graduate has been successfully added!" : "Absolwent został pomyślnie dodany",
     "Add" : "Dodaj",
-    "Remove" : "Usuń"
+    "Remove" : "Usuń",
+    "List of .pdf files" : "Spis plików .pdf"
 }
