--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -63,5 +63,18 @@
     "Graduate has been successfully added!" : "Absolwent został pomyślnie dodany",
     "Add" : "Dodaj",
     "Remove" : "Usuń",
-    "List of .pdf files" : "Spis plików .pdf"
+    "List of .pdf files" : "Spis plików .pdf",
+    "All rights reserved." : "Wszelkie prawa zastrzeżone",
+    "Hello!" : "Witaj!",
+    "Please click the button below to verify your email address." : "Kliknij poniższy przycisk, aby zweryfikować swój adres e-mail.",
+    "If you did not create an account, no further action is required." : "Jeśli nie utworzyłeś konta, zignoruj tą wiadomość.",
+    "Regards" : "Pozdrawia",
+    "Graduate" : "System absolwentów",
+    "Verify Email Address" : "Zweryfikuj adres e-mail",
+    "If you’re having trouble clicking the \":actionText\" button, copy and paste the URL below\n into your web browser: [:actionURL](:actionURL)" : "Jeśli masz problem z kliknięciem przycisku „Zweryfikuj adres e-mail”, skopiuj poniższy adres URL i wklej go w przeglądarce internetowej",
+    "Reset Password Notification" : "Reset hasła",
+    "You are receiving this email because we received a password reset request for your account." : "Otrzymujesz ten mail, ponieważ otrzymaliśmy prośbę o zresetowanie hasła do Twojego konta.",
+    "If you did not request a password reset, no further action is required." : "Jeśli nie zażądałeś zresetowania hasła, zignoruj tą wiadomość.",
+    "Your email address has been verified." : "Twój adres e mail został zweryfikowany."
+
 }
