Change main site view

--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -82,6 +82,15 @@
     "Graduate has been successfully updated!" : "Absolwent został pomyślnie zmnieniony!",
     "Shared" : "Udostępniony",
     "yes" : "tak",
-    "no" : "nie"
+    "no" : "nie",
+    "Search the graduates database now!" : "Przeszukaj baze danych absolwentów już teraz!",
+    "To fully use the service, log in." : "Aby w pełni korzystać z usługi, zaloguj się.",
+    "Click now!" : "Kliknij teraz!",
+    "List of graduates" : "Spis absolwentów",
+    "Search the graduates of your school!" : "Przeszukaj absolwentów twojej szkoły!",
+    "Easy access" : "Łatwy dostęp",
+    "Thanks to the cloud you can use the system all over the world." : "Dzięki chmurze możesz korzystać z systemu na całym świecie.",
+    "Save, edit, delete ..." : "Zapisz, edytuj, usuwaj ...",
+    "Log into the system to get more options" : "Zaloguj się do systemu, aby uzyskać więcej możliwości"
 
 }
