Add verification code to registration

--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -91,6 +91,7 @@
     "Easy access" : "Łatwy dostęp",
     "Thanks to the cloud you can use the system all over the world." : "Dzięki chmurze możesz korzystać z systemu na całym świecie.",
     "Save, edit, delete ..." : "Zapisz, edytuj, usuwaj ...",
-    "Log into the system to get more options" : "Zaloguj się do systemu, aby uzyskać więcej możliwości"
+    "Log into the system to get more options" : "Zaloguj się do systemu, aby uzyskać więcej możliwości",
+    "Access code" : "Kod dostępu"
 
 }
