--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -99,5 +99,6 @@
     "Change" : "Zmień",
     "Invalid old password!" : "Niepoprawne stare hasło!",
     "Password has been changed." : "Hasło zostało zmienione.",
-    "Invalid password!" : "Niepoprawne hasło!"
+    "Invalid password!" : "Niepoprawne hasło!",
+    "Personal data has been changed." : "Dane osobowe zostały zmienione."
 }
