--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -1,8 +1,8 @@
 {
-    "Login" : "Zajoguj się",
+    "Login" : "Zaloguj się",
     "Register" : "Zarejestruj się",
     "E-Mail Address" : "Adres e-mail",
-    "Email" : "Email",
+    "Email" : "E-mail",
     "Type" : "Rodzaj",
     "Password" : "Hasło",
     "Confirm Password" : "Powtórz hasło",
@@ -14,9 +14,9 @@
     "Search" : "Szukaj",
     "Created at" : "Dodany",
     "Last updated at" : "Ostatnio aktualizowany",
-    "Verify Your Email Address" : "Zrewyfikuj swój adres email",
-    "A fresh verification link has been sent to your email address." : "Nowy link aktywacyjny został właśnie wysłany na twój adres email",
-    "Before proceeding, please check your email for a verification link." : "Najpierw sprawdź, czy otrzymałeś maila z aktywacyjnym link-iem.",
+    "Verify Your Email Address" : "Zweryfikuj swój adres e-mail",
+    "A fresh verification link has been sent to your email address." : "Nowy link aktywacyjny został właśnie wysłany na twój adres e-mail",
+    "Before proceeding, please check your email for a verification link." : "Najpierw sprawdź, czy otrzymałeś maila z aktywacyjnym linkiem.",
     "If you did not receive the email" : "Jeśli nie otrzymałeś maila",
     "click here to request another" : "kliknij tutaj by wysłać go ponownie",
     "Reset Password" : "Reset hasła",
@@ -42,7 +42,7 @@
     "Increase permissions" : "Zwiększ uprawnienia",
     "Decrease permissions" : "Zmniejsz uprawnienia",
     "Successfully increased permissions!" : "Pomyślnie zwiększono uprawnienia!",
-    "Successfully decreased permissions!" : "Pomyślnie zmiejszono uprawnienia!",
+    "Successfully decreased permissions!" : "Pomyślnie zmniejszono uprawnienia!",
     "No search results" : "Brak wyników wyszukiwania",
     "Try to search something else" : "Spróbuj wyszukać czegoś innego",
     "Description" : "Opis",
@@ -50,7 +50,7 @@
     "You have been registered!" : "Zostałeś pomyślnie zarejestrowany!",
     "Bin" : "Kosz",
     "No deleted graduates." : "Brak usuniętych absolwentów",
-    "Deleted graduates" : "Usunięci absowenci",
+    "Deleted graduates" : "Usunięci absolwenci",
     "Restore" : "Przywróć",
     "Force Delete" : "Usuń trwale",
     "The graduate has been restored!" : "Absolwent został przywrócony!",
@@ -79,11 +79,11 @@
     "Delete" : "Usuń",
     "Edit" : "Zmień",
     "Click the image you want to delete": "Kliknij skan, który chcesz usunąć",
-    "Graduate has been successfully updated!" : "Absolwent został pomyślnie zmnieniony!",
+    "Graduate has been successfully updated!" : "Absolwent został pomyślnie zmieniony!",
     "Shared" : "Udostępniony",
     "yes" : "tak",
     "no" : "nie",
-    "Search the graduates database now!" : "Przeszukaj baze danych absolwentów już teraz!",
+    "Search the graduates database now!" : "Przeszukaj bazę danych absolwentów już teraz!",
     "To fully use the service, log in." : "Aby w pełni korzystać z usługi, zaloguj się.",
     "Click now!" : "Kliknij teraz!",
     "List of graduates" : "Spis absolwentów",
