--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -22,7 +22,7 @@
     "Reset Password" : "Reset hasła",
     "Send Password Reset Link" : "Wyślij",
     "Hello" : "Witaj",
-    "Graduate system 2019 All rights reserved. Author: Mateusz Sutor" : "System absolwentów 2019 Wszelkie prawa zastrzeżone. Autor: Mateusz Sutor",
+    "Graduate system 2019 All rights reserved. Author: " : "System absolwentów 2019 Wszelkie prawa zastrzeżone. Autor: ",
     "Your personal data" : "Twoje dane osobowe",
     "verified" : "zweryfikowany",
     "unverified" : "niezweryfikowany",
@@ -117,5 +117,6 @@
     "Forbidden":"Brak dostępu",
     "Your account has been blocked.": "Twoje konto zostało zablokowane.",
     "Contact the school office for more information and scans of graduate." : "Skontaktuj się z sekretariatem szkoły, aby uzyskać więcej informacji i skany absolwenta.",
-    "Note: images and scans with a text or border color blue are shared (available to those not logged in)." : "Zauważ: zdjęcia oraz skany o kolorze tekstu lub obramowania niebieskiego są udostępnione (widoczne dla zalogowanych)."
+    "Note: images and scans with a text or border color blue are shared (available to those not logged in)." : "Zauważ: zdjęcia oraz skany o kolorze tekstu lub obramowania niebieskiego są udostępnione (widoczne dla zalogowanych).",
+    "Contact email:" : "Kontaktowy adres e-mail"
 }
