Fix of the previous commit

--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -22,7 +22,7 @@
     "Reset Password" : "Reset hasła",
     "Send Password Reset Link" : "Wyślij",
     "Hello" : "Witaj",
-    "Graduate system 2019 All rights reserved. Author: " : "System absolwentów 2019 Wszelkie prawa zastrzeżone. Autor: ",
+    "Graduate system 2020 | All rights reserved | Author: " : "System absolwentów 2020 | Wszelkie prawa zastrzeżone | Autor: ",
     "Your personal data" : "Twoje dane osobowe",
     "verified" : "zweryfikowany",
     "unverified" : "niezweryfikowany",
