Add share chechbox while adding new files/image

--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -116,7 +116,7 @@
 	"This action is unauthorized.":"Przepraszamy, ale nie masz dostępu do tej strony.",
     "Forbidden":"Brak dostępu",
     "Your account has been blocked.": "Twoje konto zostało zablokowane.",
-    "Contact the school office for more information and scans of graduate." : "Skontaktuj się z sekretariatem szkoły, aby uzyskać więcej informacji i skany absolwenta.",
+    "Contact the school office for more information and scans of graduate." : "Skontaktuj się z sekretariatem szkoły, aby uzyskać więcej informacji i skanów dokumetów absolwenta.",
     "Note: images and scans with a text or border color blue are shared (available to those not logged in)." : "Zauważ: zdjęcia oraz skany o kolorze tekstu lub obramowania niebieskiego są udostępnione (widoczne dla zalogowanych).",
     "Contact email:" : "Kontaktowy adres e-mail"
 }
